--- a/README
+++ b/README
@@ -33,3 +33,5 @@ step3|  sleep(self, time=0)
      |  
 step2|  uploadcaptcha(self, imagedata, maxtimeout=60)
      |      Upload the Captcha base64 encoded to 9kw.eu. (gif/jpg/png)
+
+DONATE BITCOIN: 1JWj484iRqjnKaixQrJC7WPqk616WgdsaE
