--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 #
 #    py9kw.py - A API for the Captcha-solvingservice 9kw.eu
 #
-#    Copyright (C) 2014 by Jan Helbling <jan.helbling@gmail.com>
+#    Copyright (C) 2014 by Jan Helbling <jan.helbling@mailbox.org>
 #
 #    This program is free software: you can redistribute it and/or modify
 #    it under the terms of the GNU General Public License as published by
