--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 #    py9kw.py - A API for the Captcha-solvingservice 9kw.eu
 #
 #    Copyright (C) 2014 by Jan Helbling <jan.helbling@mailbox.org>
-#
+#    Updted 2020-01-25 by over_nine_thousand
 #    This program is free software: you can redistribute it and/or modify
 #    it under the terms of the GNU General Public License as published by
 #    the Free Software Foundation, either version 3 of the License, or
@@ -33,5 +33,3 @@ step3|  sleep(self, time=0)
      |  
 step2|  uploadcaptcha(self, imagedata, maxtimeout=60)
      |      Upload the Captcha base64 encoded to 9kw.eu. (gif/jpg/png)
-
-DONATE BITCOIN: 1F8HiBCRndFq5pbVQrbr8tGAT3JHxpPsxF
